[gd_scene load_steps=8 format=3 uid="uid://blw7ccqolpuox"]

[ext_resource type="Script" path="res://code/levels/game_world/game_world_interface.gd" id="1_cs47x"]
[ext_resource type="PackedScene" uid="uid://bbx2y3axaw0h4" path="res://code/levels/game_world/game_world.tscn" id="1_v7j8f"]
[ext_resource type="Texture2D" uid="uid://b6fkga07dp1fl" path="res://assets/art/placeholder.png" id="2_h11sx"]
[ext_resource type="Script" path="res://code/levels/game_world/HUD.gd" id="2_pt3hb"]
[ext_resource type="Texture2D" uid="uid://cs78m84tlyy3x" path="res://icon.svg" id="3_63ycx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tr0kd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_yjcb4"]
viewport_path = NodePath("GameWorldInputPassthrough/GameWorldRenderer")

[node name="GameWorldInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cs47x")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tr0kd")

[node name="PixelPerfectDisplay" type="TextureRect" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_yjcb4")
expand_mode = 1
stretch_mode = 5

[node name="HUD" type="Control" parent="PixelPerfectDisplay" node_paths=PackedStringArray("player")]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -105.0
offset_right = 130.0
grow_vertical = 0
rotation = -0.00175821
script = ExtResource("2_pt3hb")
player = NodePath("../../GameWorldInputPassthrough/GameWorldRenderer/GameWorld/Player")

[node name="Icon" type="Sprite2D" parent="PixelPerfectDisplay/HUD"]
position = Vector2(39.6909, -392.931)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_63ycx")

[node name="Scroll" type="TextureRect" parent="PixelPerfectDisplay/HUD"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
texture = ExtResource("2_h11sx")
expand_mode = 2

[node name="ScrollCounter" type="Label" parent="PixelPerfectDisplay/HUD"]
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -33.0
offset_right = 91.0
offset_bottom = -7.0
grow_vertical = 0
text = "15 left"

[node name="HeldItem" type="TextureRect" parent="PixelPerfectDisplay/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -95.0
offset_right = 40.0
offset_bottom = -55.0
grow_vertical = 0
expand_mode = 1

[node name="HeldItemLabel" type="Label" parent="PixelPerfectDisplay/HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 44.0
offset_top = -100.0
offset_right = 148.0
offset_bottom = -48.0
grow_vertical = 0
text = "L: drop
J: interact"

[node name="GameWorldInputPassthrough" type="SubViewportContainer" parent="."]
editor_description = "This node is a \"dummy\" node, 
and isn't suppose to be drawn to the window.
Leave the visibility layers empty/unchecked.
(Keep the light mask checked though, you need that)
"
visibility_layer = 0
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameWorldRenderer" type="SubViewport" parent="GameWorldInputPassthrough"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
size = Vector2i(960, 539)
render_target_update_mode = 4

[node name="GameWorld" parent="GameWorldInputPassthrough/GameWorldRenderer" instance=ExtResource("1_v7j8f")]
